--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h2{
 }
 p{
     color:black;
-    font-size: 15px;
+    font-size: 14px;
 }
 
 
@@ -113,16 +113,14 @@ select{
     margin-bottom: 65px;
     
 }
-h1:active{
-    margin-top: -1px;
-}
 
 .buts{
     width: 135px;
-    height: 50px;
+    height: 55px;
     font-size: 17px;
     font-weight: bold;
     color: white;
+    padding: 2px;
 }
 .buts:active{
   margin-bottom: -7px;
@@ -160,6 +158,7 @@ header{
     display: flex;
     flex-direction: column;
     margin-top: 15px;
+    padding: 3px;
     
 }
 .conclusion{
