--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h2{
 }
 p{
     color:black;
-    font-size: 15.5px;
+    font-size: 18px;
 }
 
 
@@ -113,14 +113,16 @@ select{
     margin-bottom: 65px;
     
 }
+h1:active{
+    margin-top: -1px;
+}
 
 .buts{
     width: 135px;
-    height: 55px;
+    height: 50px;
     font-size: 17px;
     font-weight: bold;
     color: white;
-    padding: 2px;
 }
 .buts:active{
   margin-bottom: -7px;
@@ -158,7 +160,6 @@ header{
     display: flex;
     flex-direction: column;
     margin-top: 15px;
-    padding: 3px;
     
 }
 .conclusion{
@@ -335,7 +336,7 @@ button:active {
  .background2 {
       background-color: #e0e3ff; 
       position: absolute;
-      top: 41%;
+      top: 40%;
       left: 114px;
       width: 25px;
       height: 45px;
@@ -345,8 +346,8 @@ button:active {
 .background1 {
       background-color: #e0e3ff; 
       position: absolute;
-      top: 39%;
-      left: 270px;
+      top: 43%;
+      left: 250px;
       width: 50px;
       height: 70px;
       border-radius: 60%;
