--- a/style.css
+++ b/style.css
@@ -115,10 +115,11 @@ select{
 }
 .buts{
     width: 135px;
-    height: 50px;
+    height: 55px;
     font-size: 17px;
     font-weight: bold;
     color: white;
+    padding: 2px;
 }
 .buts:active{
   margin-bottom: -7px;
@@ -332,7 +333,7 @@ button:active {
  .background2 {
       background-color: #e0e3ff; 
       position: absolute;
-      top: 40%;
+      top: 37%;
       left: 114px;
       width: 25px;
       height: 45px;
@@ -342,8 +343,8 @@ button:active {
 .background1 {
       background-color: #e0e3ff; 
       position: absolute;
-      top: 43%;
-      left: 250px;
+      top: 39%;
+      left: 260px;
       width: 50px;
       height: 70px;
       border-radius: 60%;
